test/lit/vpto/ub/tile_to_ub/transfer/tload_nonunit_stride.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a3 --pto-backend=vpto %s -o %t 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a3", pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @tload_nonunit_stride(%src: !pto.ptr<f32, gm>) attributes {pto.aicore} {
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c2 = arith.constant 2 : index
    %c16 = arith.constant 16 : index
    %c32 = arith.constant 32 : index
    %c64 = arith.constant 64 : index
    %view = pto.make_tensor_view %src, shape = [%c16, %c32], strides = [%c64, %c2]
      : !pto.tensor_view<?x?xf32>
    %part = pto.partition_view %view, offsets = [%c0, %c0], sizes = [%c16, %c32]
      : !pto.tensor_view<?x?xf32> -> !pto.partition_tensor_view<16x32xf32>
    %tile = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=32, v_row=16, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    // CHECK: error: A2/A3 DMA lowering requires a unit innermost stride
    pto.tload ins(%part : !pto.partition_tensor_view<16x32xf32>)
      outs(%tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=32, v_row=16, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    return
  }
}
